# pomaidb

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  benchmark_all.sh  docker-compose.yml  gdb_out.txt  requirements.txt  run_test.py
.github/workflows/: ci.yml
api/openapi/: v1.yaml
benchmarks/: bench_cbrs.cpp  comprehensive_bench.cc  edge_ai_core_bench.cc  encryption_perf_bench.cc  graph_bench.cc  hybrid_orchestrator_bench.cc  ingestion_bench.cc  low_ram_profile_bench.cc  mesh_lod_bench.cc  new_membrane_bench.cc  palloc_env_stress.cc  perf_baseline.json  python_cifar10_feature_bench.py  quantization_comp_bench.cc  rag_bench.cc  simd_new_membranes_bench.cc  vulkan_transfer_bench.cc
bindings/python/pomai/: ffi_zero_copy.py
cmake/: PatchPallocInit.cmake
docs/: API_ERROR_TAXONOMY.md  BACKUP_RESTORE.md  COMPAT_MATRIX.md  EDGE_DEPLOYMENT.md  EDGE_RELEASE.md  PRODUCTION_AND_EMBEDDED_ASSESSMENT.md  PRODUCTION_SCORECARD.md  PYTHON_API.md  QUERY_PLANNER_LITE.md  REPLICATION_ENVELOPE.md  STORAGE_FORMAT.md  SUPPORT_POLICY.md  VERSIONING.md  adr-0001-api-versioning.md
examples/: README.md  cpp_basic.cpp  go_basic.go  js_basic.mjs  pomai_multimodal_demo.cpp  python_basic.py  python_zero_copy_demo.py  rag_quickstart.py  ts_basic.ts
include/: palloc_compat.h
include/pomai/: agent_memory.h  c_api.h  c_types.h  database.h  env.h  graph.h  hooks.h  membrane_capabilities.h  membrane_iterator.h  metadata.h  options.h  pomai.h  rag.h  search.h  slice.h  storage_engine.hpp  types.h
include/pomai/quantization/: bit_quantizer.h  half_float_quantizer.h
include/pomai/rag/: chunking.h  embedding_provider.h  pipeline.h
include/util/: memory_env.h
patches/: palloc-init-designator-order.patch
python/: README.md  pyproject.toml
python/pomaidb/: __init__.py  zero_copy.py
python/pomaidb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: check_api_contract.sh  check_no_malloc_new.sh  edge_release_print_sizes.sh  install_pomaidb.sh  rag_smoke.py  run_benchmarks_one_by_one.sh  slim_palloc_submodule.sh
sdk/go/: README.md  go.mod  sdk.go
sdk/node/: README.md  index.js  package.json
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: lib.rs
src/: database.cc  db.cc  palloc_page_pool.cc
src/ai/: ai_engine.cpp  ai_engine.h  analytical_engine.cpp  analytical_engine.h  analytical_engine_test.cc
src/ai/cheesebrain_core/: cheese-adapter.cpp  cheese-adapter.h  cheese-arch.cpp  cheese-arch.h  cheese-batch.cpp  cheese-batch.h  cheese-chat.cpp  cheese-chat.h  cheese-context.cpp  cheese-context.h  cheese-cparams.cpp  cheese-cparams.h  cheese-cpp.h  cheese-grammar.cpp  cheese-grammar.h  cheese-graph.cpp  cheese-graph.h  cheese-hparams.cpp  cheese-hparams.h  cheese-impl.cpp  cheese-impl.h  cheese-io.cpp  cheese-io.h  cheese-kv-cache-iswa.cpp  cheese-kv-cache-iswa.h  cheese-kv-cache.cpp  cheese-kv-cache.h  cheese-kv-cells.h  cheese-memory-hybrid-iswa.cpp  cheese-memory-hybrid-iswa.h  cheese-memory-hybrid.cpp  cheese-memory-hybrid.h  cheese-memory-recurrent.cpp  cheese-memory-recurrent.h  cheese-memory.cpp  cheese-memory.h  cheese-mmap.cpp  cheese-mmap.h  cheese-model-api.cpp  cheese-model-loader.cpp  (+15 more)
src/api/: db.cc
src/capi/: capi_db.cc  capi_membrane_capabilities.cc  capi_membrane_scan.cc  capi_scan.cc  capi_status.cc  capi_utils.h
src/compute/vulkan/: vulkan_config.h  vulkan_device_context.cc  vulkan_device_context.h  vulkan_init.cc  vulkan_init.h  vulkan_memory_bridge.cc  vulkan_memory_bridge.h  vulkan_staging_pool.cc  vulkan_staging_pool.h
src/core/: bitset_mask.cc  distance.cc  distance.h  snapshot_wrapper.h
src/core/ai/: no_train_dispatch.cc  no_train_dispatch.h
src/core/audio/: audio_engine.cc  audio_engine.h
src/core/bitset/: bitset_engine.cc  bitset_engine.h
src/core/blob/: blob_engine.cc  blob_engine.h
src/core/bloom/: bloom_engine.cc  bloom_engine.h
src/core/concurrency/: executor.h  scheduler.cc  scheduler.h
src/core/connectivity/: edge_gateway.cc  edge_gateway.h
src/core/document/: document_engine.cc  document_engine.h
src/core/graph/: bitset_frontier.h  graph_key.h  graph_membrane_impl.h  sparse_graph_matrix.h
src/core/hooks/: auto_edge_hook.h
src/core/index/: hnsw_index.cc  ivf_flat.cc  (+2 more)
src/storage/: storage_engine.cc
src/table/: arena.h  flat_hash_memmap.h  memtable.cc  memtable.h  segment.cc  segment.h
src/tools/: pomai_inspect.cc
src/util/: aligned_vector.h  half_float.h  logging.cc  logging.h  memory_env.cc  posix_env.cc  posix_file.cc
tests/: accuracy_test.cc  bench_baseline.cc  palloc_perf_verify.cc  python_api_completeness_test.py  test_c_api_basic.cpp
tests/common/: bruteforce_oracle.cc
tests/crash/: manifest_corruption_test.cc  new_membrane_fault_test.cc  power_loss_stress_test.cc  recovery_test.cc  sd_fault_injection_test.cc  simd_new_membranes_fault_test.cc
tests/ffi/: python_ctypes_smoke.py
tests/integ/: db_backpressure_test.cc  db_consistency_test.cc  db_edge_workload_test.cc  db_error_paths_test.cc  db_open_test.cc  db_partial_search_test.cc  db_segment_test.cc  db_soak_stress_test.cc  membrane_test.cc  new_membrane_persistence_test.cc  rag_pipeline_test.cc  search_newest_wins_test.cc  shard_concurrency_test.cc  simd_new_membranes_persistence_test.cc
tests/recall/: recall_test.cc
tests/tsan/: backpressure_tsan_test.cc  db_concurrency_tsan_test.cc  shard_runtime_tsan_test.cc
tests/unit/: agent_memory_concurrency_test.cc  edge_ai_core_enhancements_test.cc  edge_platform_test.cc  edge_profile_options_test.cc  fp16_test.cc  graph_rag_test.cc  logging_test.cc  low_ram_limits_test.cc  mailbox_test.cc  membrane_capabilities_test.cc  mesh_lod_manager_test.cc  multi_modal_test.cc  new_membrane_typed_api_test.cc  no_train_dispatch_test.cc  query_orchestrator_test.cc  rag_chunking_test.cc  rag_embedding_test.cc  segment_test.cc  shard_manifest_test.cc  simd_new_membranes_test.cc  streaming_index_test.cc  text_membrane_test.cc  vulkan_memory_bridge_test.cc  wal_test.cc
tools/: perf_baseline.json  perf_gate.sh  pomai_bench.py  pomaictl.py  pomaidb_server.cc
(+146 files in other folders)
