cmake_minimum_required(VERSION 3.20)
project(pomai VERSION 0.1.0 LANGUAGES C CXX)

# =========================
# Global build settings
# =========================
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

option(POMAI_BUILD_TESTS "Build tests" OFF)
option(POMAI_BUILD_BENCH "Build benchmarks" OFF)

# =========================
# Phase 3: palloc (git submodule at third_party/palloc)
# =========================
option(POMAI_USE_PALLOC "Use palloc as global allocator (PA_OVERRIDE=ON)" ON)

# Ensure POMAI_USE_PALLOC is defined for source code (0 or 1)
add_compile_definitions(POMAI_USE_PALLOC=$<BOOL:${POMAI_USE_PALLOC}>)

if (POMAI_USE_PALLOC)
  if (NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/third_party/palloc/CMakeLists.txt)
    message(FATAL_ERROR
      "palloc submodule not initialized. Run:\n  git submodule update --init third_party/palloc")
  endif()
  # Apply designator-order fix for init.c (required when building with C++/PA_USE_CXX; submodule has wrong order)
  set(PALLOC_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/third_party/palloc)
  include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/PatchPallocInit.cmake)
  # palloc submodule uses PA_* options — set BEFORE add_subdirectory
  set(PA_BUILD_SHARED      OFF CACHE BOOL "" FORCE)
  set(PA_BUILD_OBJECT      OFF CACHE BOOL "" FORCE)
  set(PA_BUILD_TESTS       OFF CACHE BOOL "" FORCE)
  set(PA_OVERRIDE          ON  CACHE BOOL "" FORCE)
  set(PA_INSTALL_TOPLEVEL  OFF CACHE BOOL "" FORCE)
  set(PA_USE_CXX           ON  CACHE BOOL "" FORCE)
  add_subdirectory(third_party/palloc EXCLUDE_FROM_ALL)
  message(STATUS "[pomai] palloc: enabled (static, PA_OVERRIDE=ON)")
else()
  message(STATUS "[pomai] palloc: disabled")
endif()


# =========================
# Native HNSW (Replaces FAISS HNSW)
# =========================
message(STATUS "[pomai] Native HNSW: enabled")


# =========================
# Library: pomai
# =========================
add_library(pomai STATIC
  src/api/db.cc
  src/database.cc
  src/core/vector_engine/vector_engine.cc
  src/core/shard/shard.cc
  src/core/shard/runtime.cc
  src/core/shard/layer_lookup.cc
  src/core/shard/iterator.cc
  src/core/shard/manifest.cc
  src/core/membrane/manager.cc
  src/table/memtable.cc
  src/storage/wal/wal.cc
  src/storage/manifest/manifest.cc
  src/table/segment.cc
  src/core/storage/compaction_manager.cc

  src/core/quantization/scalar_quantizer.cc
  src/core/quantization/half_float_quantizer.cc
  src/core/index/ivf_coarse.cc
  src/core/index/ivf_flat.cc
  src/core/distance.cc

  src/core/routing/routing_table.cc
  src/core/routing/kmeans_lite.cc
  src/core/routing/routing_persist.cc
  src/core/rag/rag_engine.cc

  # Phase 2: Product Quantizer
  src/core/quantization/pomai_pq.cc

  # Phase 3 (Milvus-Lite inspired): BitsetMask pre-computed filter bitset
  src/core/bitset_mask.cc

  src/core/index/hnsw_index.cc
  third_party/pomaidb_hnsw/hnsw.cc

  # Gate #1/#2 utilities (linked into libpomai)
  src/util/posix_file.cc
  src/util/crc32c.cc
  src/util/logging.cc
)

target_include_directories(pomai
  PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include
    ${CMAKE_CURRENT_SOURCE_DIR}/src
  PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/palloc/include
)

# OpenMP for parallel builds if needed
find_package(OpenMP QUIET)
if (OpenMP_CXX_FOUND)
  target_link_libraries(pomai PRIVATE OpenMP::OpenMP_CXX)
endif()

# Phase 3: mimalloc — TWO linking modes
#
#  Mode A (full MI_OVERRIDE): for standalone executables/static binaries only.
#          malloc/free/new/delete are globally replaced. Fast, but UNSAFE when
#          loaded as a .so by a host process (e.g. Python) that has its own heap.
#
#  Mode B (no-override, libpomai_c.so): mimalloc is used internally via
#          mi_heap_* APIs. The global malloc/free are NOT replaced, so Python's
#          glibc heap and mimalloc coexist without conflict.
#
# We achieve this by NOT linking mimalloc into libpomai (the intermediate static
# lib). Instead:
#   - libpomai_c.so  links mimalloc-static with MI_OVERRIDE=OFF (internal-only)
#   - test/bench executables link mimalloc-static with MI_OVERRIDE=ON
#     (done in the executable's own target_link_libraries)
#
# Note: MI_OVERRIDE is set at mimalloc *build time* (above), so we build ONE
# mimalloc with MI_OVERRIDE=ON. For the .so we suppress interposition by NOT
# exporting gnu-versioned malloc symbols — achieved via -Wl,--exclude-libs.


# =========================
# Library: pomai_c (C ABI)
# =========================
set(POMAI_C_API_SOURCES
  src/capi/capi_status.cc
  src/capi/capi_db.cc
  src/capi/capi_scan.cc
)

add_library(pomai_c SHARED ${POMAI_C_API_SOURCES})
add_library(pomai_c_static STATIC ${POMAI_C_API_SOURCES})

set_target_properties(pomai_c_static PROPERTIES OUTPUT_NAME pomai_c)

target_link_libraries(pomai_c PRIVATE pomai)
target_link_libraries(pomai_c_static PRIVATE pomai)

# Phase 3 fix: shared library (libpomai_c.so) must resolve palloc symbols when loaded by Python/FFI.
# We link a palloc built with PALLOC_OVERRIDE=OFF so the .so is self-contained and does not
# override the process malloc (safe for ctypes/JNI/FFI). Static wrapper and exes use palloc with OVERRIDE=ON.
#
if (POMAI_USE_PALLOC)
  # Static wrapper: link palloc (override ON) for standalone executables.
  target_link_libraries(pomai_c_static PRIVATE palloc-static)
  target_compile_definitions(pomai_c_static PRIVATE POMAI_USE_PALLOC=1)

  # Build palloc a second time with PA_OVERRIDE=OFF for the shared library (no malloc override at dlopen).
  include(ExternalProject)
  set(PALLOC_NOOVERRIDE_LIB "${CMAKE_BINARY_DIR}/palloc_nooverride-build/libpalloc.a")
  ExternalProject_Add(palloc_nooverride
    SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/third_party/palloc
    BINARY_DIR ${CMAKE_BINARY_DIR}/palloc_nooverride-build
    CMAKE_ARGS
      -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
      -DPA_OVERRIDE=OFF
      -DPA_BUILD_SHARED=OFF
      -DPA_BUILD_OBJECT=OFF
      -DPA_BUILD_TESTS=OFF
      -DPA_USE_CXX=ON
      -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
      -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
    INSTALL_COMMAND ""
    BUILD_BYPRODUCTS ${PALLOC_NOOVERRIDE_LIB}
  )
  add_library(palloc-static-nooverride STATIC IMPORTED GLOBAL)
  set_target_properties(palloc-static-nooverride PROPERTIES
    IMPORTED_LOCATION ${PALLOC_NOOVERRIDE_LIB}
  )
  add_dependencies(palloc-static-nooverride palloc_nooverride)
  add_dependencies(pomai_c palloc_nooverride)
  target_link_libraries(pomai_c PRIVATE palloc-static-nooverride)
  target_link_libraries(pomai_c PRIVATE pthread rt atomic)
endif()

# Export C API symbols when building shared library on Windows.
target_compile_definitions(pomai_c PRIVATE POMAI_C_BUILD_DLL)

target_include_directories(pomai_c
  PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include
  PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/src
)
target_include_directories(pomai_c_static
  PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include
  PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/src
)

if (MSVC)
  target_compile_options(pomai_c PRIVATE /W4 /permissive-)
  target_compile_options(pomai_c_static PRIVATE /W4 /permissive-)
else()
  target_compile_options(pomai_c PRIVATE -Wall -Wextra -Wpedantic -Wconversion -Wshadow)
  target_compile_options(pomai_c_static PRIVATE -Wall -Wextra -Wpedantic -Wconversion -Wshadow)
endif()

if (MSVC)
  target_compile_options(pomai PRIVATE /W4 /permissive-)
else()
  target_compile_options(pomai PRIVATE -Wall -Wextra -Wpedantic -Wconversion -Wshadow)
endif()

# =========================
# Tests
# =========================
if (POMAI_BUILD_TESTS)
  enable_testing()

  # Detect TSAN builds (best-effort).
  set(POMAI_IS_TSAN OFF)
  if (CMAKE_CXX_FLAGS MATCHES "fsanitize=thread" OR CMAKE_EXE_LINKER_FLAGS MATCHES "fsanitize=thread")
    set(POMAI_IS_TSAN ON)
  endif()

  option(POMAI_ENABLE_CRASH_TESTS "Enable crash-style tests (may be incompatible with TSAN)" ON)
  if (POMAI_IS_TSAN)
    set(POMAI_ENABLE_CRASH_TESTS OFF)
  endif()

  function(pomai_setup_test target)
    # Link against main library (and palloc when used, so exe resolves palloc symbols)
    target_link_libraries(${target} PRIVATE pomai)
    if (POMAI_USE_PALLOC)
      target_link_libraries(${target} PRIVATE palloc-static)
    endif()

    # One main per test binary (your harness)
    target_sources(${target} PRIVATE tests/common/test_runner.cc)

    # Warnings
    if (MSVC)
      target_compile_options(${target} PRIVATE /W4 /permissive-)
    else()
      target_compile_options(${target} PRIVATE -Wall -Wextra -Wpedantic -Wconversion -Wshadow)
    endif()

    # Allow tests to include both public and internal headers.
    target_include_directories(${target} PRIVATE
      ${CMAKE_CURRENT_SOURCE_DIR}              # "tests/common/..."
      ${CMAKE_CURRENT_SOURCE_DIR}/include      # public API
      ${CMAKE_CURRENT_SOURCE_DIR}/src          # internal headers: util/, core/, table/, storage/
      ${CMAKE_CURRENT_SOURCE_DIR}/third_party/palloc/include  # palloc.h for util/aligned_vector.h etc.
    )

    # Make TSAN builds more stable on some distros (PIE can trigger weird mmap layouts).
    if (POMAI_IS_TSAN)
      target_compile_options(${target} PRIVATE -fno-pie)
      target_link_options(${target} PRIVATE -no-pie)
    endif()
  endfunction()

  function(pomai_add_labeled_test target label)
    add_test(NAME ${target} COMMAND ${target})
    set_tests_properties(${target} PROPERTIES LABELS "${label}")
  endfunction()

  # ---- Unit ----
  add_executable(crc32c_test tests/unit/crc32c_test.cc)
  pomai_setup_test(crc32c_test)
  pomai_add_labeled_test(crc32c_test "unit")

  add_executable(hnsw_pomaidb_test tests/unit/hnsw_pomaidb_test.cc)
  pomai_setup_test(hnsw_pomaidb_test)
  pomai_add_labeled_test(hnsw_pomaidb_test "unit")

  add_executable(memtable_test tests/unit/memtable_test.cc)
  pomai_setup_test(memtable_test)
  pomai_add_labeled_test(memtable_test "unit")

  add_executable(mailbox_test tests/unit/mailbox_test.cc)
  pomai_setup_test(mailbox_test)
  pomai_add_labeled_test(mailbox_test "unit")

  add_executable(logging_test tests/unit/logging_test.cc)
  pomai_setup_test(logging_test)
  pomai_add_labeled_test(logging_test "unit")

  add_executable(wal_test tests/unit/wal_test.cc)
  pomai_setup_test(wal_test)
  pomai_add_labeled_test(wal_test "unit")

  add_executable(segment_test tests/unit/segment_test.cc)
  pomai_setup_test(segment_test)
  pomai_add_labeled_test(segment_test "unit")

  add_executable(fp16_test tests/unit/fp16_test.cc)
  pomai_setup_test(fp16_test)
  pomai_add_labeled_test(fp16_test "unit")
  
  add_executable(shard_manifest_test tests/unit/shard_manifest_test.cc)
  pomai_setup_test(shard_manifest_test)
  pomai_add_labeled_test(shard_manifest_test "unit")

  add_executable(oracle_test tests/unit/oracle_test.cc tests/common/bruteforce_oracle.cc)
  pomai_setup_test(oracle_test)
  pomai_add_labeled_test(oracle_test "unit")

  add_executable(routing_table_test tests/unit/routing_table_test.cc)
  pomai_setup_test(routing_table_test)
  pomai_add_labeled_test(routing_table_test "unit")

  add_executable(streaming_index_test tests/unit/streaming_index_test.cc)
  pomai_setup_test(streaming_index_test)
  pomai_add_labeled_test(streaming_index_test "unit")

  add_executable(recall_test tests/recall/recall_test.cc tests/recall/recall_dataset.cc tests/common/bruteforce_oracle.cc)
  pomai_setup_test(recall_test)
  pomai_add_labeled_test(recall_test "recall")

  # ---- Integration (embedded DB API) ----
  add_executable(db_basic_test tests/integ/db_basic_test.cc)
  pomai_setup_test(db_basic_test)
  pomai_add_labeled_test(db_basic_test "integ")

  add_executable(db_batch_test tests/integ/db_batch_test.cc)
  pomai_setup_test(db_batch_test)
  pomai_add_labeled_test(db_batch_test "integ")

  add_executable(db_persistence_test tests/integ/db_persistence_test.cc)
  pomai_setup_test(db_persistence_test)
  pomai_add_labeled_test(db_persistence_test "integ")

  add_executable(db_segment_test tests/integ/db_segment_test.cc)
  pomai_setup_test(db_segment_test)
  pomai_add_labeled_test(db_segment_test "integ")

  add_executable(db_open_test tests/integ/db_open_test.cc)
  pomai_setup_test(db_open_test)
  pomai_add_labeled_test(db_open_test "integ")
  
  add_executable(db_consistency_test tests/integ/db_consistency_test.cc)
  pomai_setup_test(db_consistency_test)
  pomai_add_labeled_test(db_consistency_test "integ")

  add_executable(db_partial_search_test tests/integ/db_partial_search_test.cc)
  pomai_setup_test(db_partial_search_test)
  pomai_add_labeled_test(db_partial_search_test "integ")

  add_executable(routing_engine_test tests/integ/routing_engine_test.cc)
  pomai_setup_test(routing_engine_test)
  pomai_add_labeled_test(routing_engine_test "integ")

  add_executable(manifest_test tests/unit/manifest_test.cc)
  pomai_setup_test(manifest_test)
  pomai_add_labeled_test(manifest_test "unit")

  add_executable(membrane_test tests/integ/membrane_test.cc)
  pomai_setup_test(membrane_test)
  pomai_add_labeled_test(membrane_test "integ")

  add_executable(membrane_persistence_test tests/integ/membrane_persistence_test.cc)
  pomai_setup_test(membrane_persistence_test)
  pomai_add_labeled_test(membrane_persistence_test "integ")

  add_executable(shard_concurrency_test tests/integ/shard_concurrency_test.cc)
  pomai_setup_test(shard_concurrency_test)
  pomai_add_labeled_test(shard_concurrency_test "integ")

  add_executable(iterator_test tests/integ/iterator_test.cc)
  pomai_setup_test(iterator_test)
  pomai_add_labeled_test(iterator_test "integ")

  add_executable(metadata_test tests/integ/metadata_test.cc)
  pomai_setup_test(metadata_test)
  pomai_add_labeled_test(metadata_test "integ")

  add_executable(search_filter_test tests/integ/search_filter_test.cc)
  pomai_setup_test(search_filter_test)
  pomai_add_labeled_test(search_filter_test "integ")

  add_executable(rag_contract_test tests/integ/rag_contract_test.cc)
  pomai_setup_test(rag_contract_test)
  pomai_add_labeled_test(rag_contract_test "integ")

  add_executable(rag_search_test tests/integ/rag_search_test.cc)
  pomai_setup_test(rag_search_test)
  pomai_add_labeled_test(rag_search_test "integ")

  add_executable(search_newest_wins_test tests/integ/search_newest_wins_test.cc)
  pomai_setup_test(search_newest_wins_test)
  pomai_add_labeled_test(search_newest_wins_test "integ")

  add_executable(manifest_corruption_test tests/crash/manifest_corruption_test.cc)
  pomai_setup_test(manifest_corruption_test)
  pomai_add_labeled_test(manifest_corruption_test "crash")

  add_executable(recovery_test tests/crash/recovery_test.cc)
  pomai_setup_test(recovery_test)
  pomai_add_labeled_test(recovery_test "crash")
  set_tests_properties(recovery_test PROPERTIES TIMEOUT 90)

  # ---- Crash (Gate #2) ----
  if (POMAI_ENABLE_CRASH_TESTS)
    add_executable(pomai_crash_test tests/crash/crash_replay_test.cc)
    
    # Manual setup loosely based on pomai_setup_test but without test_runner.cc
    target_link_libraries(pomai_crash_test PRIVATE pomai)
    if (POMAI_USE_PALLOC)
      target_link_libraries(pomai_crash_test PRIVATE palloc-static)
    endif()
    if (MSVC)
      target_compile_options(pomai_crash_test PRIVATE /W4 /permissive-)
    else()
      target_compile_options(pomai_crash_test PRIVATE -Wall -Wextra -Wpedantic -Wconversion -Wshadow)
    endif()
    target_include_directories(pomai_crash_test PRIVATE
      ${CMAKE_CURRENT_SOURCE_DIR}
      ${CMAKE_CURRENT_SOURCE_DIR}/include
      ${CMAKE_CURRENT_SOURCE_DIR}/src
      ${CMAKE_CURRENT_SOURCE_DIR}/third_party/palloc/include
    )
    if (POMAI_IS_TSAN)
      target_compile_options(pomai_crash_test PRIVATE -fno-pie)
      target_link_options(pomai_crash_test PRIVATE -no-pie)
    endif()

    add_test(NAME pomai_crash_replay COMMAND pomai_crash_test)
    set_tests_properties(pomai_crash_replay PROPERTIES LABELS "crash" TIMEOUT 60)
  endif()

  # ---- TSAN (Gate #3) ----
  add_executable(db_concurrency_tsan_test tests/tsan/db_concurrency_tsan_test.cc)
  pomai_setup_test(db_concurrency_tsan_test)
  pomai_add_labeled_test(db_concurrency_tsan_test "tsan")

  add_executable(shard_runtime_tsan_test tests/tsan/shard_runtime_tsan_test.cc)
  pomai_setup_test(shard_runtime_tsan_test)
  pomai_add_labeled_test(shard_runtime_tsan_test "tsan")

  add_executable(basic_workload_tsan_test tests/tsan/basic_workload_tsan_test.cc)
  pomai_setup_test(basic_workload_tsan_test)
  pomai_add_labeled_test(basic_workload_tsan_test "tsan")

  add_subdirectory(tests/fuzz)
endif()

# =========================
# Benchmarks
# =========================
if (POMAI_BUILD_BENCH)
  # Add benchmarks here later, use a similar helper to tests (but WITHOUT test_runner.cc)
  # Example:
  # add_executable(my_bench benchmarks/my_bench.cc)
  # target_link_libraries(my_bench PRIVATE pomai)
  # target_include_directories(my_bench PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/src)
endif()

# Helper: when palloc is used, executables that link pomai (or pomai_c) must also link palloc.
set(POMAI_EXE_DEPS pomai)
if (POMAI_USE_PALLOC)
  list(APPEND POMAI_EXE_DEPS palloc-static)
endif()

# Baseline Benchmark
add_executable(bench_baseline tests/bench_baseline.cc)
target_link_libraries(bench_baseline PRIVATE ${POMAI_EXE_DEPS})
target_include_directories(bench_baseline PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)

# Comprehensive Benchmark (Industry-standard metrics)
add_executable(comprehensive_bench benchmarks/comprehensive_bench.cc)
target_link_libraries(comprehensive_bench PRIVATE ${POMAI_EXE_DEPS})
target_include_directories(comprehensive_bench PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)

# Ingestion Throughput Benchmark
add_executable(ingestion_bench benchmarks/ingestion_bench.cc)
target_link_libraries(ingestion_bench PRIVATE ${POMAI_EXE_DEPS})
target_include_directories(ingestion_bench PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)

# RAG Benchmark
add_executable(rag_bench benchmarks/rag_bench.cc)
target_link_libraries(rag_bench PRIVATE ${POMAI_EXE_DEPS})
target_include_directories(rag_bench PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)


# CBR-S benchmark suite
add_executable(bench_cbrs benchmarks/bench_cbrs.cpp)
target_link_libraries(bench_cbrs PRIVATE ${POMAI_EXE_DEPS})
target_include_directories(bench_cbrs PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/src)
set_target_properties(bench_cbrs PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

# Deterministic CI benchmark for perf gate
add_executable(ci_perf_bench benchmarks/ci_perf_bench.cc)
target_link_libraries(ci_perf_bench PRIVATE ${POMAI_EXE_DEPS})
target_include_directories(ci_perf_bench PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)

# benchmark_a: Multi-Environment Stress Test (IoT / Edge / Cloud validation)
add_executable(benchmark_a benchmarks/palloc_env_stress.cc)
target_link_libraries(benchmark_a PRIVATE ${POMAI_EXE_DEPS})
target_include_directories(benchmark_a PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
if (POMAI_USE_PALLOC)
  target_include_directories(benchmark_a PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/third_party/palloc/include)
endif()

# =========================
# Tools
# =========================
add_executable(pomai_inspect src/tools/pomai_inspect.cc)
target_link_libraries(pomai_inspect PRIVATE ${POMAI_EXE_DEPS})
target_include_directories(pomai_inspect PRIVATE 
    ${CMAKE_CURRENT_SOURCE_DIR}/include
    ${CMAKE_CURRENT_SOURCE_DIR}/src
)

# =========================
# C API Tests & Examples
# =========================
# When POMAI_USE_PALLOC=ON, pomai_c.so does not link palloc (for safe Python/FFI use).
# C exes that link only the .so would then have undefined palloc refs; build them only when palloc is off.
if (POMAI_BUILD_TESTS)
  add_executable(c_api_test tests/test_c_api_basic.cpp)
  target_link_libraries(c_api_test PRIVATE pomai_c_static)
  target_sources(c_api_test PRIVATE tests/common/test_runner.cc)
  target_include_directories(c_api_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/include)
  add_test(NAME c_api_test COMMAND c_api_test)
endif()

if (NOT POMAI_USE_PALLOC)
  add_executable(c_basic_example examples/c_basic.c)
  target_link_libraries(c_basic_example PRIVATE pomai_c)
  target_include_directories(c_basic_example PRIVATE include)

  add_executable(c_scan_export_example examples/c_scan_export.c)
  target_link_libraries(c_scan_export_example PRIVATE pomai_c)
  target_include_directories(c_scan_export_example PRIVATE include)
endif()

install(TARGETS pomai pomai_c pomai_c_static
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION bin)
install(FILES
  include/pomai/c_api.h
  include/pomai/c_status.h
  include/pomai/c_types.h
  include/pomai/c_version.h
  include/pomai/database.h
  DESTINATION include/pomai)
add_executable(palloc_perf_verify tests/palloc_perf_verify.cc)
target_link_libraries(palloc_perf_verify PRIVATE pomai palloc-static pthread)
